# TalkTogether

./: DealSQL.cpp  DealSQL.h  README.md  log.cpp  log.h  main.cpp  server.cpp  server.h
windows-client/: CMakeLists.txt  main.cpp
windows-client/header/: client.h
windows-client/src/: client.cpp
windows-server/: CMakeLists.txt  main.cpp
windows-server/header/: DealSQL.h  log.h  server.h
windows-server/src/: DealSQL.cpp  server.cpp
